00_YUSEUNGJE/04_k8s/section02/react002dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react002dep
spec:
  selector:
    matchLabels:
      app: react002kube
  template:
    metadata:
      labels:
        app: react002kube
    spec:
      containers:
      - name: react-container
        image: coffit23/k8s_react_ing:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
